feat: add ability to delete branch env
